--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/img/favicon.ico">
   </head>
+  <body>
+  </body>
+</html>
